add feather tests
