# src/api/api.yaml
@@ -3,6 +3,31 @@ info:
   version: 1.0.0
   title: Battery Archive API
 paths:
+  /:
+    get:
+      summary: Root Path
+      x-openapi-router-controller: api.controllers.cell_controller
+      operationId: root
+      tags:
+        - general
+      responses:
+        '200':
+          description: A paged array of cells
+          headers:
+            x-next:
+              description: A link to the next page of responses
+              schema:
+                type: string
+          content:
+            application/json:    
+              schema:
+                $ref: "#/components/schemas/Cells"
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
   /cells:
     get:
       summary: Fetches all Cells
@@ -18,6 +43,108 @@ paths:
           schema:
             type: integer
             format: int32
+      responses:
+        '200':
+          description: A paged array of cells
+          headers:
+            x-next:
+              description: A link to the next page of responses
+              schema:
+                type: string
+          content:
+            application/json:    
+              schema:
+                $ref: "#/components/schemas/Cells"
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+  /cells/{cell_id}:
+    get:
+      summary: Fetches cell with cell_id
+      x-openapi-router-controller: api.controllers.cell_controller
+      operationId: get_cell_with_id
+      tags:
+        - cells
+      parameters:
+      - name: cell_id
+        in: path
+        description: Cell ID of the resource to get
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      responses:
+        '200':
+          description: A paged array of cells
+          headers:
+            x-next:
+              description: A link to the next page of responses
+              schema:
+                type: string
+          content:
+            application/json:    
+              schema:
+                $ref: "#/components/schemas/Cells"
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+  /tests/{test_name}:
+    get:
+      summary: Fetches tests of testname
+      x-openapi-router-controller: api.controllers.cell_controller
+      operationId: get_test
+      tags:
+        - tests
+      parameters:
+      - name: test_name
+        in: path
+        description: Cell ID of the resource to get
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      responses:
+        '200':
+          description: A paged array of cells
+          headers:
+            x-next:
+              description: A link to the next page of responses
+              schema:
+                type: string
+          content:
+            application/json:    
+              schema:
+                $ref: "#/components/schemas/Cells"
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+  /ts/{test_name}:
+    get:
+      summary: Fetches tests of testname
+      x-openapi-router-controller: api.controllers.cell_controller
+      operationId: get_timeseries
+      tags:
+        - tests
+      parameters:
+      - name: test_name
+        in: path
+        description: Cell ID of the resource to get
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
       responses:
         '200':
           description: A paged array of cells
